--- a/src/styles/kits/_placeholders.scss
+++ b/src/styles/kits/_placeholders.scss
@@ -35,7 +35,6 @@
         cursor: pointer;
         text-align: center;
         box-shadow: inset 0 0 0 2px $white, 0 0 0 3px $black;
+        z-index: 999;
     }
-
-
 }
