--- a/src/styles/food.scss
+++ b/src/styles/food.scss
@@ -5,11 +5,13 @@ main {
         padding: 50px 0;
 
         &__list {
-            margin-bottom: 70px;
-        }
-
-        &__item {
-            margin-right: 50px;
+            width: $col-9;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            margin: 70px auto;
+            gap: 30px;
         }
 
         &__link {
