--- a/src/styles/food.scss
+++ b/src/styles/food.scss
@@ -5,10 +5,9 @@ main {
         padding: 50px 0;
 
         &__list {
-            width: $col-9;
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: space-evenly;
             align-items: center;
             margin: 70px auto;
             gap: 30px;
