--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -20,6 +20,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
         margin: 0 auto;
+        gap: 10px;
     }
 
     &__link {
