--- a/src/styles/header.mobile.scss
+++ b/src/styles/header.mobile.scss
@@ -1,5 +1,57 @@
 @media (max-width: 768px) {
     .header {
+        &-burger {
+            display: block;
+            z-index: 999;
+        }
+
+        &-navbar {
+            &__brand {
+                padding-left: 0;
+                z-index: 999;
+            }
+
+            &__items {
+                position: fixed;
+                left: 0;
+                top: 0;
+                width: 100%;
+                min-height: 100%;
+                background: rgba(0, 0, 0, 0.8);
+                backdrop-filter: blur(10px);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: nowrap;
+                transition: 0.3s;
+                transform: translateX(-100%);
+                padding: 0;
+                z-index: 1;
+            }
+
+            &.open {
+                & .header__list {
+                    transform: translateX(0);
+                }
+
+                & .header-burger__item:nth-child(1) {
+                    background: $white;
+                    transform: translate(2px, 8px) rotate(45deg);
+                }
+
+                & .header-burger__item:nth-child(2) {
+                    background: $white;
+                    transform: rotate(-45deg);
+                }
+
+                & .header-burger__item:nth-child(3) {
+                    background: $white;
+                    transform: translate(-2px, -9px) rotate(45deg);
+                }
+            }
+        }
+
         &__nav {
             padding: 20px 0;
         }
@@ -19,37 +71,6 @@
 
         &__list {
             display: none;
-        }
-
-        &__menu {
-            width: 50px;
-            height: 50px;
-            border-radius: 10px;
-            background: $title-color;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            & span {
-                width: 80%;
-                height: 2px;
-                background: $white;
-                position: relative;
-
-                &::after,
-                &::before {
-                    content: '';
-                    width: 100%;
-                    height: 2px;
-                    background: $white;
-                    position: absolute;
-                    transform: translateY(10px);
-                }
-
-                &::before {
-                    transform: translateY(-10px);
-                }
-            }
         }
     }
 }
