--- a/src/styles/kits/_placeholders.scss
+++ b/src/styles/kits/_placeholders.scss
@@ -14,34 +14,38 @@
     }
 
     &-burger {
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
         position: relative;
         cursor: pointer;
         display: none;
+        background: $title-color;
+        border-radius: 5px;
+        z-index: 3;
 
         &__item {
             position: absolute;
+
             height: 2px;
             background: #fff;
             transition: 0.5s;
 
             &:nth-child(1) {
-                width: 50%;
-                top: 0;
-                left: 0;
+                width: 35%;
+                top: 15%;
+                left: 15%;
             }
 
             &:nth-child(2) {
-                width: 100%;
-                top: 49%;
-                left: 0;
+                width: 70%;
+                top: 50%;
+                left: 15%;
             }
 
             &:nth-child(3) {
-                width: 50%;
-                right: 0;
-                bottom: 0;
+                width: 35%;
+                right: 15%;
+                bottom: 14%;
             }
         }
     }
