Add Raleway-Medium font and apply it to header navigation links

--- a/src/styles/header.mobile.scss
+++ b/src/styles/header.mobile.scss
@@ -32,6 +32,10 @@
                 &:hover {
                     background: none;
                 }
+
+                & .header__link {
+                    font-family: $font-medium;
+                }
             }
 
             &.open {
