--- a/src/styles/kits/_variables.scss
+++ b/src/styles/kits/_variables.scss
@@ -6,6 +6,7 @@ $font-black: 'Raleway-Black';
 $font-light: 'Raleway-Light';
 $font-regular: 'Raleway-Regular';
 $font-thin: 'Raleway-Thin';
+$font-medium: 'Raleway-Medium';
 
 // Colors
 $title-color: #69cf17;
