--- a/src/styles/kits/_fonts.scss
+++ b/src/styles/kits/_fonts.scss
@@ -34,3 +34,10 @@
     font-weight: 100;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Raleway-Medium';
+    src: url('../assets/fonts/Raleway-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
