Update footer styles for mobile and fix image paths in recipe section

--- a/src/styles/recipe.scss
+++ b/src/styles/recipe.scss
@@ -1,5 +1,5 @@
 .recipe {
-    background: url(../assets/section_bg.png) center center / cover;
+    background: url('../assets/images/section_bg.png') center center / cover;
     padding: 50px 0 150px;
 
     &__title {
