Add active link functionality and update styles for food links

--- a/src/styles/food.scss
+++ b/src/styles/food.scss
@@ -20,7 +20,7 @@ main {
             position: relative;
 
             &:hover,
-            &:focus {
+            &:focus, &.active {
                 color: $title-color;
 
                 &::before {
