--- a/src/styles/kits/_placeholders.scss
+++ b/src/styles/kits/_placeholders.scss
@@ -51,19 +51,26 @@
     }
 
     & .unmute-btn {
+        position: fixed;
         transform: scale(2);
         cursor: pointer;
         user-select: none;
+        border-radius: 50%;
+        border: 1px solid #fff;
+        left: 3%;
+        bottom: 5%;
+        background: #000;
+        z-index: 999;
     }
 
     & #top {
-        display: none;
         position: fixed;
         right: 3%;
         bottom: 5%;
         color: $white;
         font-size: 30px;
-        border-radius: 10px;
+        border-radius: 50%;
+        border: 2px solid $white;
         width: 40px;
         height: 40px;
         background: $black;
@@ -71,7 +78,8 @@
         align-items: center;
         cursor: pointer;
         text-align: center;
-        box-shadow: inset 0 0 0 2px $white, 0 0 0 3px $black;
         z-index: 999;
+        transform: scale(0);
+        transition: 0.5s;
     }
 }
