Add slider functionality, unmute button, and various style updates

--- a/src/styles/grids.scss
+++ b/src/styles/grids.scss
@@ -15,6 +15,10 @@
     min-height: 100vh;
 }
 
+.m-auto {
+    margin: 0 auto
+}
+
 @for $i from 1 through 12 {
     .col-#{$i} {
         width: calc(100% / 12 * #{$i});
