--- a/src/styles/header.mobile.scss
+++ b/src/styles/header.mobile.scss
@@ -23,6 +23,7 @@
                 transform: translateX(-100%);
                 padding: 0;
                 gap: 30px;
+                z-index: 2;
             }
 
             & .header__item {
