--- a/src/styles/kits/_placeholders.scss
+++ b/src/styles/kits/_placeholders.scss
@@ -21,7 +21,7 @@
         display: none;
         background: $title-color;
         border-radius: 5px;
-        z-index: 3;
+        z-index: 1;
 
         &__item {
             position: absolute;
@@ -81,5 +81,43 @@
         z-index: 999;
         transform: scale(0);
         transition: 0.5s;
+    }
+
+    & .btns {
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 999;
+
+        & button {
+            margin: 10px;
+            border-radius: 50%;
+            border: 1px solid $white;
+            padding: 10px 10px;
+            cursor: pointer;
+        }
+
+        & .indicators {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+
+            & .indicator {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background: $white;
+                cursor: pointer;
+
+                &.active {
+                    background: $title-color;
+                }
+            }
+        }
     }
 }
